<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/profilImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="380dp"/>

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/returnButton"
        app:layout_constraintBottom_toBottomOf="@+id/profilImage"
        android:layout_marginBottom="30dp"
        tools:text="Aaaaaaa"
        android:textSize="30dp"
        android:textColor="@color/white"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favouriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_star_border_white_24dp"
        app:backgroundTint="@color/backgroundcolor"/>

    <android.support.v7.widget.CardView
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/view"
        app:layout_constraintTop_toBottomOf="@+id/profilImage">

        <TextView
            android:id="@+id/nameDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:textSize="25dp"
            tools:text="Aaaaaaa"
            android:textColor="@color/black"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/view"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_24dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/situationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            tools:text="Aaaaaaa"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/view"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_24dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            tools:text="Aaaaaaa"/>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/view"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language_24dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/socialText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            tools:text="Aaaaaaa"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/view"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <TextView
            android:id="@+id/aPropos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            android:paddingStart="10dp"
            android:text="A propos de moi"
            android:textSize="25sp"
            android:textColor="@color/black"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/view"
        app:layout_constraintTop_toBottomOf="@+id/view5">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            tools:text="Aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
            android:textSize="15sp"/>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>