<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.RecyclerView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

android:id="@+id/list_favourite_neighbours"
android:name="com.openclassrooms.entrevoisins.ui.neighbour_list.FavoriteNeighbourFragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginLeft="16dp"
android:layout_marginRight="16dp"
app:layoutManager="LinearLayoutManager"
tools:context=".ui.neighbour_list.NeighbourFragment"
tools:listitem="@layout/fragment_neighbour" />